[gd_scene load_steps=3 format=3 uid="uid://cdhemt5pjjmer"]

[ext_resource type="Texture2D" uid="uid://c28bbsg86rdcc" path="res://Resource/Texture/fire_wall.png" id="1_oek1q"]
[ext_resource type="Script" uid="uid://cr4ly24nvof68" path="res://Scene/Element/app_shop_item.gd" id="1_x0f3n"]

[node name="AppShopItem" type="Control"]
custom_minimum_size = Vector2(192, 250)
layout_mode = 3
anchors_preset = 0
offset_right = 192.0
offset_bottom = 250.0
script = ExtResource("1_x0f3n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2

[node name="BuyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
icon = ExtResource("1_oek1q")
flat = true
icon_alignment = 1
expand_icon = true

[node name="PriceLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "10
[img=32]res://Resource/Texture/bytecoin.png[/img]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum"
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
